--- a/templates/partials/nota_fiscal/importar_xml.html
+++ b/templates/partials/nota_fiscal/importar_xml.html
@@ -30,6 +30,7 @@
     <div class="modal-content modal-selecao-empresa" data-bs-theme="dark">
       <div class="modal-header">
         <h5 class="modal-title">Categorias dos Novos Produtos</h5>
+        <button type="button" class="btn btn-sm btn-secondary me-2" id="btn-aplicar-categoria-todos">Aplicar a todos</button>
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body">
